--- a/frontend/about.css
+++ b/frontend/about.css
@@ -68,7 +68,7 @@ nav
 
 /*Imagens*/
 img.perfil, img.pesquisa, img.carrinho
-{  
+{
     margin-right: 20px;    
     width: 17px;
 }
@@ -88,13 +88,22 @@ hr
 
 
 /*Listas*/
-.nav-footer ul
+.images-info ul li
+{
+    color:#00ADB5;
+    font-size: 110%;
+    display: inline-block;
+    list-style: none;
+    margin: 2% 11%;
+}
+
+.nav-footer ul, .images-info, .nav-perfil ul
 {
     flex: 1;
     text-align: center;
 }
 
-.nav-links ul li, .nav-footer ul li
+.nav-links ul li, .nav-footer ul li, .nav-perfil ul li
 {
     display: inline-block;
     list-style: none;
